--- a/README
+++ b/README
@@ -3,3 +3,6 @@ Compiler written following Aho's Compiler's: Principles, Techniques, and Tools
 23/03/12 - wrote java methods that can translate a simple infix arithmetic
 expression with binary addition and subtraction into postfix
 Section 2.5
+
+23/03/13 - wrote java classes for tokens, as well as a lexical analyzer
+Section 2.6
