--- a/README
+++ b/README
@@ -6,3 +6,5 @@ Section 2.5
 
 23/03/13 - wrote java classes for tokens, as well as a lexical analyzer
 Section 2.6
+
+23/03/14 - exercise 2.6.2, allow lexical analyzer to recognize relational operators
